--- a/subes-front/src/App.css
+++ b/subes-front/src/App.css
@@ -4,3 +4,10 @@
   padding: 2rem;
   text-align: center;
 }
+
+@media screen and (max-width: 480px) {
+    
+  #root {
+    overflow-x: hidden;
+  }
+}
