--- a/subes-front/src/assets/components/post/post.css
+++ b/subes-front/src/assets/components/post/post.css
@@ -7,12 +7,38 @@
 
 .col {
     border: 1px solid #2c2c2c;
-    margin-bottom: 1rem;
-    margin-right: 1rem;
+    margin-bottom: 2rem;
+    margin-right: 2rem;
     padding: 1rem;
     width: 40rem;
 }
 
 .post-section img {
     width: 70%;
+}
+
+iframe {
+    width: 100% ;
+    height: 40rem;
+}
+
+@media screen and (max-width: 480px) {
+    .col {
+        width: 8rem;
+        margin-bottom: 2rem;
+        margin-right: -1rem;
+    }
+
+    h2 {
+        font-size: .8rem;
+    }
+
+    p {
+        font-size: .5rem;
+    }
+    
+    iframe {
+        width: 100% ;
+        height: 10rem;
+    }
 }
