--- a/subes-front/src/assets/components/shareForm/shareForm.css
+++ b/subes-front/src/assets/components/shareForm/shareForm.css
@@ -1,10 +1,11 @@
 form {
     margin-left: 25%;
-    margin-top: 5%;
     display: flex;
     flex-direction: column;
     gap: 1rem;
     text-align: left;
+    border: 1px solid #1c1c1c;
+    padding: 3rem;
 }
 
 form label {
@@ -28,7 +29,7 @@ form label span {
 .input-text:focus {
     outline: none;
     transition: .4s linear;
-    width: 100%;
+    width: 96%;
 }
 
 textarea {
@@ -45,7 +46,7 @@ textarea {
 textarea:focus{
     outline: none;
     transition: .4s linear;
-    width: 100%;
+    width: 96%;
 }
 
 .input-submit {
@@ -61,5 +62,5 @@ textarea:focus{
 
 .input-submit:hover {
     transition: .2s linear;
-    width: 43.5%;
+    width: 44%;
 }
