--- a/subes-front/src/index.css
+++ b/subes-front/src/index.css
@@ -27,3 +27,10 @@ a:hover{
 h1 {
   font-weight: 100;
 }
+
+@media screen and (max-width: 480px) {
+    
+  :root {
+    overflow-x: hidden;
+  }
+}
