--- a/subes-front/src/assets/components/shareForm/shareForm.css
+++ b/subes-front/src/assets/components/shareForm/shareForm.css
@@ -24,6 +24,7 @@ form label span {
     padding: 1rem;
     font-size: 1rem;
     transition: .3s linear;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 .input-text:focus {
@@ -41,6 +42,7 @@ textarea {
     padding: 1rem;
     font-size: 1rem;
     transition: .3s linear;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 textarea:focus{
