--- a/subes-front/src/assets/components/post/post.css
+++ b/subes-front/src/assets/components/post/post.css
@@ -25,10 +25,13 @@
 .webpage {
     overflow: hidden;
     overflow-y: hidden;
+    height: 20rem;
+    width: 100px;
 }
 
 .media {
-    width: 70%;
+    width: 80%;
+    max-height: 23rem;
     outline: none;
     border: none;
 }
@@ -38,8 +41,8 @@
     flex-direction: row;
     align-items: center;
     text-align: center;
-    width: 30rem;
-    height: 25rem;
+    width: 100%;
+    /* height: 25rem; */
     justify-content: center;
 }
 
@@ -50,7 +53,13 @@
 
 .post-title {
     font-size: 1.2rem;
+    bottom: 0;
 }
+
+.post-info{
+    display: flex;
+    flex-direction: column;
+} 
 
 @media screen and (max-width: 480px) {
     .col {
